--- a/css/raw/styles.css
+++ b/css/raw/styles.css
@@ -14871,7 +14871,9 @@ figure > img {
 
 .demo-box .button.active .active-text {
   -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
+  -ms-flex: 1 1 0;
+      flex: 1 1 0;
+  min-width: 0;
 }
 
 /*-------------
@@ -15048,8 +15050,12 @@ figure > img {
   height: 60px;
 }
 
-.floaty-bar .action-list::before, .floaty-bar .action-list::after {
-  top: 14px;
+    -ms-flex: 1 1 0;
+        flex: 1 1 0;
+    min-width: 0;
+    -ms-flex: 1 1 0;
+        flex: 1 1 0;
+    min-width: 0;
 }
 
 .floaty-bar .action-list .action-list-item.unread::after {
